# tiles

./: .gitignore  .task.cfg.mk  Makefile  README.md  autostart.sh  colors.py  config.py  pyproject.toml  run-picom.sh  setup.cfg
colors/: colors.py  config.json  config.toml
conf/: dunstrc  picom.conf
eww/: eww.scss  eww.yuck
eww/yuck/: vars.yuck  widgets.yuck  windows.yuck
rofi/styles/: bluetooth.rasi  colors.rasi  confirm.rasi  default.rasi  dqtile.rasi  keymap.rasi  launcher.rasi  message.rasi  powermenu.rasi  windows.rasi
tiles/: autostart.py  colors.py  hooks.py  icons.json  icons.py  keys.py  layouts.py  palettes.py  settings.py  state.py  workspaces.py
